MODQM-78 Implement GET status endpoint (#61)

--- a/pom.xml
+++ b/pom.xml
@@ -22,31 +22,31 @@
 
   <properties>
     <java.version>11</java.version>
-    <folio-spring-base.version>1.0.1</folio-spring-base.version>
-    <openapi-generator.version>4.3.1</openapi-generator.version>
-    <json.version>20200518</json.version>
-    <junit-extensions.version>2.4.0</junit-extensions.version>
-    <mockito.version>3.6.28</mockito.version>
-    <wiremock.version>2.27.2</wiremock.version>
-    <mapstruct.version>1.3.1.Final</mapstruct.version>
-    <groovy.version>3.0.7</groovy.version>
-    <!-- -->
-    <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
-
-    <jsonschema_paths>schemas</jsonschema_paths>
-    <vertx.version>4.0.0</vertx.version>
-
-    <rest-assured.version>4.3.0</rest-assured.version>
-
-    <awaitility.version>4.0.2</awaitility.version>
-    <ramlfiles_path>${basedir}/ramls</ramlfiles_path>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <generated_sources_dir>${project.build.directory}/generated-sources</generated_sources_dir>
-    <jsonschema2pojo_output_dir>${generated_sources_dir}/jsonschema2pojo</jsonschema2pojo_output_dir>
-    <marc4j.version>2.9.1</marc4j.version>
-    <jsonpath.version>2.4.0</jsonpath.version>
+    <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
+
+    <folio-spring-base.version>1.0.2-SNAPSHOT</folio-spring-base.version>
     <mod-srm-client.version>2.4.3</mod-srm-client.version>
+    <openapi-generator.version>4.3.1</openapi-generator.version>
+    <mockito.version>3.7.7</mockito.version>
+    <mapstruct.version>1.4.2.Final</mapstruct.version>
+    <commons-lang.version>2.6</commons-lang.version>
+    <groovy.version>3.0.7</groovy.version>
+    <sonar.exclusions>
+	src/main/java/org/folio/qm/domain/entity/**,
+	src/main/java/org/folio/qm/client/**,
+	src/main/java/org/folio/qm/repository/**
+    </sonar.exclusions>
+
+    <!-- Test properties-->
+    <rest-assured.version>4.3.3</rest-assured.version>
+    <wiremock.version>2.27.2</wiremock.version>
+    <marc4j.version>2.9.1</marc4j.version>
+    <jsonpath.version>2.5.0</jsonpath.version>
+    <embedded-postgresql.version>1.6.2</embedded-postgresql.version>
+    <junit-extensions.version>2.4.0</junit-extensions.version>
+    <vertx.version>4.0.0</vertx.version>
   </properties>
 
   <dependencies>
@@ -91,10 +91,23 @@
       <version>${mapstruct.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.mapstruct</groupId>
+      <artifactId>mapstruct-processor</artifactId>
+      <version>${mapstruct.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <version>2.6</version>
+      <version>${commons-lang.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+
+    <!-- Test dependencies -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
@@ -110,8 +123,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-
-    <!-- Test dependencies -->
     <dependency>
       <groupId>io.rest-assured</groupId>
       <artifactId>rest-assured</artifactId>
@@ -136,13 +147,24 @@
       <version>${jsonpath.version}</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>io.github.glytching</groupId>
+      <artifactId>junit-extensions</artifactId>
+      <version>${junit-extensions.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.zonky.test</groupId>
+      <artifactId>embedded-database-spring-test</artifactId>
+      <version>${embedded-postgresql.version}</version>
+      <scope>test</scope>
+    </dependency>
     <!-- io.vertx.core.json.JsonObject is used for check equality of QuickMarc objects.
-         Field 'content' could be a list and for equality order of entries is not important.
-         'equals' method of QuickMarc object doesn't consider this instead of JsonObject.
+    Field 'content' could be a list and for equality order of entries is not important.
+    'equals' method of QuickMarc object doesn't consider this instead of JsonObject.
 
-         This check should be changed in future and dependency removed
-       -->
+    This check should be changed in future and dependency removed
+    -->
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
@@ -150,6 +172,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
 
   <build>
     <plugins>
@@ -161,6 +184,14 @@
           <layers>
             <enabled>true</enabled>
           </layers>
+        </configuration>
+      </plugin>
+
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <configuration>
+          <generateBackupPoms>false</generateBackupPoms>
         </configuration>
       </plugin>
 
@@ -203,11 +234,14 @@
               <generateApiTests>true</generateApiTests>
               <generateApiDocumentation>true</generateApiDocumentation>
               <generateModels>true</generateModels>
-              <modelsToGenerate>error,errors,parameter,quickMarc,quickMarc_fields,quickMarc_updateInfo</modelsToGenerate>
+              <modelsToGenerate>creationStatus,creationStatus_metadata,quickMarc,quickMarc_fields,quickMarc_updateInfo</modelsToGenerate>
               <generateModelTests>false</generateModelTests>
               <generateSupportingFiles>true</generateSupportingFiles>
               <supportingFilesToGenerate>ApiUtil.java</supportingFilesToGenerate>
               <generateModelDocumentation>true</generateModelDocumentation>
+              <importMappings>
+                <importMapping>error=org.folio.tenant.domain.dto.Error</importMapping>
+              </importMappings>
               <configOptions>
                 <java8>true</java8>
                 <dateLibrary>java</dateLibrary>
