--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,9 +3,15 @@ spring:
     name: mod-quick-marc
 #  datasource:
 #    password: folio_admin
-#    url: jdbc:postgresql://localhost:54321/okapi_modules
+#    url: jdbc:postgresql://localhost:5432/okapi_modules
 #    username: folio_admin
+  kafka:
+#    bootstrap-servers: localhost:9092
+    consumer:
+      enable-auto-commit: true
+      auto-commit-interval: 1000
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQL10Dialect
     hibernate:
       ddl-auto: none
     properties:
