--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -5,6 +5,14 @@ spring:
     changeLog: classpath:db/changelog/changelog-master.xml
     enabled: true
   jpa:
+    show-sql: true
     properties:
       hibernate:
         format_sql: true
+  kafka:
+    bootstrap-servers: ${spring.embedded.kafka.brokers}
+  autoconfigure:
+    exclude: org.springframework.boot.autoconfigure.flyway.FlywayAutoConfiguration
+logging:
+  level:
+    io.zonky.test.db.postgres: FATAL
