--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -39,3 +39,9 @@ management:
         include: info,health,env,httptrace
 server:
   port: 8081
+job:
+  execution:
+    profile:
+      default:
+        id: 6409dcff-71fa-433a-bc6a-e70ad38a9604
+        name: CLI Create MARC Bibs and Instances
