MODQM-84 Add standard admin healthcheck endpoint

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,9 @@
 spring:
   application:
     name: mod-quick-marc
-#  datasource:
+  datasource:
+    # to boot up application despite of any DB connection issues
+    continue-on-error: true
 #    password: folio_admin
 #    url: jdbc:postgresql://localhost:5432/okapi_modules
 #    username: folio_admin
@@ -16,6 +18,7 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
+        dialect: org.hibernate.dialect.PostgreSQL10Dialect
         format_sql: true
     show-sql: true
   liquibase:
@@ -37,6 +40,19 @@ management:
     web:
       exposure:
         include: info,health,env,httptrace
+      base-path: /admin
+#  endpoint:
+#    health:
+#      show-details: always
+#      show-components: always
+###################################################
+# Disable all checks except for readiness
+###################################################
+  health:
+    defaults:
+      enabled: false
+    readinessstate:
+      enabled: true
 server:
   port: 8081
 job:
