--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
     <commons-lang.version>2.6</commons-lang.version>
     <groovy.version>3.0.7</groovy.version>
     <sonar.exclusions>
-	src/main/java/org/folio/qm/domain/entity/**,
-	src/main/java/org/folio/qm/client/**,
-	src/main/java/org/folio/qm/repository/**
+      src/main/java/org/folio/qm/domain/entity/**,
+      src/main/java/org/folio/qm/client/**,
+      src/main/java/org/folio/qm/repository/**
     </sonar.exclusions>
 
     <!-- Test properties-->
@@ -47,6 +47,7 @@
     <embedded-postgresql.version>1.6.2</embedded-postgresql.version>
     <junit-extensions.version>2.4.0</junit-extensions.version>
     <vertx.version>4.0.0</vertx.version>
+    <jsonassert.version>1.5.0</jsonassert.version>
   </properties>
 
   <dependencies>
@@ -68,6 +69,10 @@
     <dependency>
       <groupId>com.fasterxml.jackson.module</groupId>
       <artifactId>jackson-module-jaxb-annotations</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jdk8</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.kafka</groupId>
@@ -184,16 +189,10 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- io.vertx.core.json.JsonObject is used for check equality of QuickMarc objects.
-    Field 'content' could be a list and for equality order of entries is not important.
-    'equals' method of QuickMarc object doesn't consider this instead of JsonObject.
-
-    This check should be changed in future and dependency removed
-    -->
     <dependency>
-      <groupId>io.vertx</groupId>
-      <artifactId>vertx-core</artifactId>
-      <version>${vertx.version}</version>
+      <groupId>org.skyscreamer</groupId>
+      <artifactId>jsonassert</artifactId>
+      <version>${jsonassert.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -269,7 +268,7 @@
               </importMappings>
               <configOptions>
                 <java8>true</java8>
-                <dateLibrary>java</dateLibrary>
+                <dateLibrary>java8</dateLibrary>
                 <interfaceOnly>true</interfaceOnly>
               </configOptions>
             </configuration>
