--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,10 +5,10 @@ spring:
     # to boot up application despite of any DB connection issues
     continue-on-error: true
     password: ${DB_PASSWORD:-pass}
-    url: jdbc:postgresql://${DB_HOST:-localhost}:${DB_PORT:-5432}/${DB_DATABASE:-db}
+    url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
     username: ${DB_USERNAME:-user}
   kafka:
-    bootstrap-servers: ${KAFKA_HOST:-localhost}:${KAFKA_PORT:-9092}
+    bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
     consumer:
       enable-auto-commit: true
       auto-commit-interval: 1000
