--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,9 +4,9 @@ spring:
   datasource:
     # to boot up application despite of any DB connection issues
     continue-on-error: true
-    password: ${DB_PASSWORD:-pass}
+    password: ${DB_PASSWORD:pass}
     url: jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_DATABASE:db}
-    username: ${DB_USERNAME:-user}
+    username: ${DB_USERNAME:user}
   kafka:
     bootstrap-servers: ${KAFKA_HOST:localhost}:${KAFKA_PORT:9092}
     consumer:
