MODQM-96 Add logging to controller and clients

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -16,6 +16,13 @@ spring:
 logging:
   level:
     io.zonky.test.db.postgres: FATAL
+folio:
+  logging:
+    request:
+      enabled: true
+    feign:
+      enabled: true
+      level: full
 job:
   execution:
     profile:
