--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -28,15 +28,17 @@ spring:
     enabled: true
   jackson:
     default-property-inclusion: NON_EMPTY
-feign:
-  client:
-    config:
-      change-manager:
-        logger-level: full
 folio:
   tenant:
     validation:
       enabled: true
+  logging:
+    request:
+      enabled: true
+    feign:
+      enabled: true
+      # Possible values: none, basic, headers, full
+      level: full
 management:
   endpoints:
     web:
