MODQM-96 Add request/response body logging

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -35,9 +35,9 @@ folio:
   logging:
     request:
       enabled: true
+      level: full
     feign:
       enabled: true
-      # Possible values: none, basic, headers, full
       level: full
 management:
   endpoints:
