--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -33,9 +33,11 @@ folio:
   logging:
     request:
       enabled: true
+      # Possible values: none, basic, headers, full. Default: basic
+      level: full
     feign:
       enabled: true
-      # Possible values: none, basic, headers, full
+      # Possible values: none, basic, headers, full. Default: basic
       level: basic
 management:
   endpoints:
