MODSOURCE-279 Store MARC Authority record
- changed type from marc to marc_bib, fixed tests

--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,11 @@
       <!-- to import data model -->
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-manager-client</artifactId>
-      <version>${mod-srm-client.version}</version>
+      <!-- Should be used only for rancher env -->
+      <scope>system</scope>
+      <version>3.1.0-SNAPSHOT</version>
+      <systemPath>${project.basedir}/lib/mod-source-record-manager-client-3.1.0-SNAPSHOT.jar</systemPath>
+      <type>jar</type>
       <exclusions>
         <exclusion>
           <groupId>org.folio</groupId>
@@ -331,7 +335,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
+          <argLine>-Dfile.encoding=UTF-8</argLine>
         </configuration>
       </plugin>
 
