--- a/pom.xml
+++ b/pom.xml
@@ -86,11 +86,7 @@
       <!-- to import data model -->
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-manager-client</artifactId>
-      <!-- Should be used only for rancher env -->
-      <scope>system</scope>
-      <version>3.1.0-SNAPSHOT</version>
-      <systemPath>${project.basedir}/lib/mod-source-record-manager-client-3.1.0-SNAPSHOT.jar</systemPath>
-      <type>jar</type>
+      <version>${mod-srm-client.version}</version>
       <exclusions>
         <exclusion>
           <groupId>org.folio</groupId>
