--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
 
     <folio-spring-base.version>1.0.5</folio-spring-base.version>
-    <mod-srm-client.version>3.0.0</mod-srm-client.version>
+    <mod-srm-client.version>3.1.0-SNAPSHOT</mod-srm-client.version>
     <openapi-generator.version>4.3.1</openapi-generator.version>
     <mockito.version>3.7.7</mockito.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
@@ -331,7 +331,7 @@
         <version>3.0.0-M5</version>
         <configuration>
           <useSystemClassLoader>false</useSystemClassLoader>
-          <argLine>@{argLine} -Dfile.encoding=UTF-8</argLine>
+          <argLine>-Dfile.encoding=UTF-8</argLine>
         </configuration>
       </plugin>
 
