--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,8 @@
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-manager-client</artifactId>
       <version>${mod-srm-client.version}</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</systemPath>
       <exclusions>
         <exclusion>
           <groupId>org.folio</groupId>
@@ -348,6 +350,47 @@
         </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+              <addClasspath>true</addClasspath>
+              <mainClass>org.folio.qm.ModQuickMarcApplication</mainClass>
+            </manifest>
+            <manifestEntries>
+              <Class-Path>lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</Class-Path>
+            </manifestEntries>
+          </archive>
+        </configuration>
+      </plugin>
+
+<!--      <plugin>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-shade-plugin</artifactId>-->
+<!--        <version>3.2.4</version>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>shade</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <transformers>-->
+<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+<!--                  <manifestEntries>-->
+<!--                    <Main-Class>org.folio.qm.ModQuickMarcApplication</Main-Class>-->
+<!--                    <Class-Path>lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</Class-Path>-->
+<!--                  </manifestEntries>-->
+<!--                </transformer>-->
+<!--              </transformers>-->
+<!--              <artifactSet />-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--      </plugin>-->
     </plugins>
   </build>
 
