--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
 
     <folio-spring-base.version>1.0.5</folio-spring-base.version>
-    <mod-srm-client.version>3.1.0</mod-srm-client.version>
+    <mod-srm-client.version>3.2.0-SNAPSHOT</mod-srm-client.version>
     <openapi-generator.version>4.3.1</openapi-generator.version>
     <mockito.version>3.7.7</mockito.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
@@ -83,12 +83,9 @@
       <optional>true</optional>
     </dependency>
     <dependency>
-      <!-- to import data model -->
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-manager-client</artifactId>
       <version>${mod-srm-client.version}</version>
-      <scope>system</scope>
-      <systemPath>${project.basedir}/lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</systemPath>
       <exclusions>
         <exclusion>
           <groupId>org.folio</groupId>
@@ -350,47 +347,6 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifest>
-              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-              <addClasspath>true</addClasspath>
-              <mainClass>org.folio.qm.ModQuickMarcApplication</mainClass>
-            </manifest>
-            <manifestEntries>
-              <Class-Path>lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</Class-Path>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
-
-<!--      <plugin>-->
-<!--        <groupId>org.apache.maven.plugins</groupId>-->
-<!--        <artifactId>maven-shade-plugin</artifactId>-->
-<!--        <version>3.2.4</version>-->
-<!--        <executions>-->
-<!--          <execution>-->
-<!--            <phase>package</phase>-->
-<!--            <goals>-->
-<!--              <goal>shade</goal>-->
-<!--            </goals>-->
-<!--            <configuration>-->
-<!--              <transformers>-->
-<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
-<!--                  <manifestEntries>-->
-<!--                    <Main-Class>org.folio.qm.ModQuickMarcApplication</Main-Class>-->
-<!--                    <Class-Path>lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</Class-Path>-->
-<!--                  </manifestEntries>-->
-<!--                </transformer>-->
-<!--              </transformers>-->
-<!--              <artifactSet />-->
-<!--            </configuration>-->
-<!--          </execution>-->
-<!--        </executions>-->
-<!--      </plugin>-->
     </plugins>
   </build>
 
