--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,12 @@
       <version>${jsonassert.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+    </dependency>
+
   </dependencies>
 
 
