MODQM-138 Make PUT async

--- a/src/main/resources/swagger.api/records-editor.yaml
+++ b/src/main/resources/swagger.api/records-editor.yaml
@@ -7,13 +7,13 @@ servers:
 paths:
   /records:
     get:
+      tags:
+        - records-editor
       responses:
         "200":
           description: MARC record successfully retrieved
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/quickMarc"
               schema:
                 $ref: "#/components/schemas/quickMarc"
         "400":
@@ -23,24 +23,18 @@ paths:
             with malformed data) provided in the response.
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
         "404":
           description: MARC record with a given ID not found
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
         "500":
           description: Internal server error, e.g. due to misconfiguration
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
       description: Get MARC record by instanceId
@@ -61,6 +55,8 @@ paths:
             pattern: "[a-zA-Z]{2}"
             default: "en"
     post:
+      tags:
+        - records-editor
       responses:
         "201":
           description: MARC Record status created
@@ -72,69 +68,24 @@ paths:
           description: Bad Request
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
         "500":
           description: Internal server error, e.g. due to misconfiguration
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
       requestBody:
         content:
           application/json:
-            example:
-              $ref: "#/components/examples/quickMarc"
             schema:
               $ref: "#/components/schemas/quickMarc"
         required: true
-  /records/{id}:
-    put:
-      responses:
-        "202":
-          description: MARC record accepted for updating
-        "400":
-          description:
-            Bad request, e.g. malformed request body or query parameter.
-            Details of the error (e.g. name of the parameter or line/character number
-            with malformed data) provided in the response.
-          content:
-            application/json:
-              example:
-                $ref: "#/components/examples/error"
-              schema:
-                $ref: "#/components/schemas/error"
-        "500":
-          description: Internal server error, e.g. due to misconfiguration
-          content:
-            application/json:
-              example:
-                $ref: "#/components/examples/error"
-              schema:
-                $ref: "#/components/schemas/error"
-      description: Edit MARC record
-      operationId: putRecord
-      requestBody:
-        content:
-          application/json:
-            example:
-              $ref: "#/components/examples/quickMarc"
-            schema:
-              $ref: "#/components/schemas/quickMarc"
-        required: true
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          "$ref": "#/components/schemas/UUID"
-        description: The UUID of a record
   /records/status:
     get:
+      tags:
+        - records-editor
       responses:
         '200':
           description: Status of MARC bibliographic record creation successfully retrieved
@@ -149,24 +100,18 @@ paths:
             with malformed data) provided in the response.
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
         '404':
           description: MARC record with a given ID not found
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
         '500':
           description: Internal server error, e.g. due to misconfiguration
           content:
             application/json:
-              example:
-                $ref: "#/components/examples/error"
               schema:
                 $ref: "#/components/schemas/error"
       description: Get status of MARC bibliographic record creation
@@ -189,10 +134,3 @@ components:
     UUID:
       type: string
       format: uuid
-  examples:
-    quickMarc:
-      value:
-        $ref: examples/quickMarcJson.sample
-    error:
-      value:
-        $ref: examples/error.sample
