MODQM-142 Refactor converters

--- a/src/main/resources/swagger.api/records-editor-async.yaml
+++ b/src/main/resources/swagger.api/records-editor-async.yaml
@@ -45,7 +45,7 @@ paths:
 components:
   schemas:
     quickMarc:
-      $ref: schemas/quickMarcJson.json
+      $ref: schemas/quickMarc.json
     creationStatus:
       $ref: schemas/creationStatus.json
     error:
