--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -39,6 +39,15 @@ folio:
     feign:
       enabled: true
       level: full
+  job:
+    execution:
+      profile:
+        marc-bib:
+          id: 6409dcff-71fa-433a-bc6a-e70ad38a9604
+          name: QuickMarc Create MARC Bib and Inventory Instance
+        marc-holdings:
+          id: fa0262c7-5816-48d0-b9b3-7b7a862a5bc7
+          name: QuickMarc Create MARC Holdings and Inventory Holdings
 management:
   endpoints:
     web:
@@ -52,12 +61,6 @@ management:
       enabled: true
 server:
   port: 8081
-job:
-  execution:
-    profile:
-      default:
-        id: 6409dcff-71fa-433a-bc6a-e70ad38a9604
-        name: CLI Create MARC Bibs and Instances
 
 logging:
   level:
