--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -24,9 +24,12 @@ folio:
     feign:
       enabled: true
       level: full
-job:
-  execution:
-    profile:
-      default:
-        id: a7fb1c32-1ffb-4a22-a76a-4067284fe68d
-        name: Default job profile
+  job:
+    execution:
+      profile:
+        marc-bib:
+          id: 6409dcff-71fa-433a-bc6a-e70ad38a9604
+          name: QuickMarc Create MARC Bib and Inventory Instance
+        marc-holdings:
+          id: fa0262c7-5816-48d0-b9b3-7b7a862a5bc7
+          name: QuickMarc Create MARC Holdings and Inventory Holdings
