--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,8 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-manager-client</artifactId>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</systemPath>
       <version>${mod-srm-client.version}</version>
       <exclusions>
         <exclusion>
