remove output directory

--- a/pom.xml
+++ b/pom.xml
@@ -243,7 +243,7 @@
                 </transformer>
               </transformers>
               <artifactSet />
-              <outputFile>${project.build.directory}/${project.artifactId}.jar</outputFile>
+<!--              <outputFile>${project.build.directory}/${project.artifactId}.jar</outputFile>-->
             </configuration>
           </execution>
         </executions>
