added srm server lib

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,13 @@
       </exclusions>
     </dependency>
     <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>mod-source-record-manager-server</artifactId>
+      <scope>system</scope>
+      <systemPath>${basedir}/lib/mod-source-record-manager-server-fat.jar</systemPath>
+      <version>${mod-srm-client.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.marc4j</groupId>
       <artifactId>marc4j</artifactId>
       <version>${marc4j.version}</version>
@@ -238,12 +245,12 @@
                   <manifestEntries>
                     <Main-Class>${start-class}</Main-Class>
                     <Multi-Release>true</Multi-Release>
-                    <Class-Path>lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar</Class-Path>
+                    <Class-Path>lib/mod-source-record-manager-client-3.2.0-SNAPSHOT.jar lib/mod-source-record-manager-server-fat.jar</Class-Path>
                   </manifestEntries>
                 </transformer>
               </transformers>
               <artifactSet />
-<!--              <outputFile>${project.build.directory}/${project.artifactId}.jar</outputFile>-->
+              <outputFile>${project.build.directory}/${project.artifactId}.jar</outputFile>
             </configuration>
           </execution>
         </executions>
