--- a/ramls/examples/quick_marc_json.sample
+++ b/ramls/examples/quick_marc_json.sample
@@ -185,7 +185,7 @@
       "indicators": ["2", " "]
     }
   ],
-  "qmRecordVersion": "1",
+  "relatedRecordVersion": "1",
   "updateInfo": {
     "recordState": "ACTUAL",
     "updateDate": "2020-07-14T12:20:10.000"
