--- a/src/main/resources/swagger.api/examples/quickMarcJson.sample
+++ b/src/main/resources/swagger.api/examples/quickMarcJson.sample
@@ -185,7 +185,7 @@
       "indicators": ["2", " "]
     }
   ],
-  "qmRecordVersion": "1",
+  "relatedRecordVersion": "1",
   "updateInfo": {
     "recordState": "ACTUAL",
     "updateDate": "2020-07-14T12:20:10.000"
