MODQM-167 Optimistic locking: mod-quick-marc modification (#123)
* MODQM-167 Optimistic locking: mod-quick-marc modification

Added SRM client for testing locally/rancher
Added qmRecordVersion to schema
Populate qmRecordVersion in the AbstractMarcDtoConverter and AbstractMarcQmConverter
Changed samples
Changed test data
Update news

--- a/ramls/examples/quick_marc_json.sample
+++ b/ramls/examples/quick_marc_json.sample
@@ -185,6 +185,7 @@
       "indicators": ["2", " "]
     }
   ],
+  "relatedRecordVersion": "1",
   "updateInfo": {
     "recordState": "ACTUAL",
     "updateDate": "2020-07-14T12:20:10.000"
