--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
     <records-editor-async.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor-async.yaml</records-editor-async.yaml.file>
 
     <folio-spring-base.version>1.0.5</folio-spring-base.version>
-    <mod-srm-client.version>3.2.0</mod-srm-client.version>
+    <mod-srm-client.version>3.3.0-SNAPSHOT</mod-srm-client.version>
     <openapi-generator.version>4.3.1</openapi-generator.version>
     <mockito.version>3.7.7</mockito.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
@@ -205,7 +205,6 @@
 
   <build>
     <plugins>
-
       <plugin>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-maven-plugin</artifactId>
