MODQM-153 Upgrade to spring-base v2.0.0

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.3.4.RELEASE</version>
+    <version>2.5.2</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
   <groupId>org.folio</groupId>
@@ -27,13 +27,13 @@
     <records-editor.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor.yaml</records-editor.yaml.file>
     <records-editor-async.yaml.file>${project.basedir}/src/main/resources/swagger.api/records-editor-async.yaml</records-editor-async.yaml.file>
 
-    <folio-spring-base.version>1.0.5</folio-spring-base.version>
+    <folio-spring-base.version>2.0.0</folio-spring-base.version>
     <mod-srm-client.version>3.3.0-SNAPSHOT</mod-srm-client.version>
-    <openapi-generator.version>4.3.1</openapi-generator.version>
-    <mockito.version>3.7.7</mockito.version>
+    <openapi-generator.version>5.2.0</openapi-generator.version>
+    <mockito.version>4.0.0</mockito.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
     <commons-lang.version>2.6</commons-lang.version>
-    <groovy.version>3.0.7</groovy.version>
+
     <sonar.exclusions>
       src/main/java/org/folio/qm/domain/entity/**,
       src/main/java/org/folio/qm/client/**,
@@ -41,12 +41,12 @@
     </sonar.exclusions>
 
     <!-- Test properties-->
-    <rest-assured.version>4.3.3</rest-assured.version>
-    <wiremock.version>2.27.2</wiremock.version>
-    <marc4j.version>2.9.1</marc4j.version>
-    <jsonpath.version>2.5.0</jsonpath.version>
-    <embedded-postgresql.version>1.6.2</embedded-postgresql.version>
-    <junit-extensions.version>2.4.0</junit-extensions.version>
+    <rest-assured.version>4.4.0</rest-assured.version>
+    <wiremock.version>2.31.0</wiremock.version>
+    <marc4j.version>2.9.2</marc4j.version>
+    <jsonpath.version>2.6.0</jsonpath.version>
+    <embedded-postgresql.version>2.1.1</embedded-postgresql.version>
+    <junit-extensions.version>2.5.0</junit-extensions.version>
     <jsonassert.version>1.5.0</jsonassert.version>
   </properties>
 
