--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -19,8 +19,7 @@ logging:
 folio:
   logging:
     request:
-      enabled: true
-      level: full
+      enabled: false
     feign:
       enabled: true
       level: full
