MODQM-178 Update return 409 if optimistic locking error

--- a/src/main/resources/swagger.api/records-editor-async.yaml
+++ b/src/main/resources/swagger.api/records-editor-async.yaml
@@ -21,6 +21,12 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/error"
+        "409":
+          description: Update failed due to optimistic locking
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/error"
         "500":
           description: Internal server error, e.g. due to misconfiguration
           content:
